Fix a bunch bugs + recipes