@@ -1,7 +1,6 @@
 package com.pigdad.paganbless.registries.blockentities;
 
 import com.pigdad.paganbless.registries.PBBlockEntities;
-import com.pigdad.paganbless.registries.RuneType;
 import com.pigdad.paganbless.registries.blocks.RunicCoreBlock;
 import com.pigdad.paganbless.registries.items.CaptureSacrificeItem;
 import com.pigdad.paganbless.registries.recipes.RunicRitualRecipe;
@@ -9,10 +8,15 @@ import com.pigdad.paganbless.utils.RecipeUtils;
 import net.minecraft.client.Minecraft;
 import net.minecraft.core.BlockPos;
 import net.minecraft.network.chat.Component;
+import net.minecraft.util.thread.BlockableEventLoop;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.item.ItemEntity;
+import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
 import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 
@@ -25,21 +29,23 @@ public class RunicCoreBlockEntity extends BlockEntity {
     }
 
     public void craftItem(Entity sacrificedEntity) {
-        if (RunicCoreBlock.getRuneType(level, getBlockPos()) != null) {
-            RuneType runeType = RunicCoreBlock.getRuneType(level, getBlockPos()).getFirst();
-            Set<BlockPos> positions = RunicCoreBlock.getRuneType(level, getBlockPos()).getSecond();
+        Set<BlockPos> runes = RunicCoreBlock.getRuneType(level, getBlockPos());
+        if (runes != null) {
+            Item runeBlock = level.getBlockState(runes.stream().toList().get(0)).getBlock().asItem();
+            Set<BlockPos> positions = RunicCoreBlock.getRuneType(level, getBlockPos());
 
             Optional<RunicRitualRecipe> recipe = Optional.empty();
 
             for (RunicRitualRecipe recipe1 : RecipeUtils.getAllRitualRecipes(level.getRecipeManager())) {
-                if (recipe1.matchesRunes(runeType, level)) {
+                if (recipe1.matchesRunes(runeBlock, level)) {
                     recipe = Optional.of(recipe1);
                     break;
                 }
             }
 
-            if (recipe.isPresent() && runeType != null) {
-                if (recipe.get().matchesRunes(runeType, level) && level.getBlockState(worldPosition).getValue(RunicCoreBlock.ACTIVE)) {
+            if (recipe.isPresent() && runeBlock != Items.AIR) {
+                if (recipe.get().matchesRunes(runeBlock, level) && level.getBlockState(worldPosition).getValue(RunicCoreBlock.ACTIVE)) {
+                    Minecraft.getInstance().player.sendSystemMessage(Component.literal("AMOGUS!"));
                     ItemStack itemStack = recipe.get().getResultItem(level.registryAccess());
 
                     if (itemStack.getItem() instanceof CaptureSacrificeItem captureSacrificeItem) {
